Meta is a bad word, repitition is hilarious

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,7 +47,7 @@
         <p class="text">{{ site.description }}</p>
       </div>
     </div>
-    <span class="footer-meta">Made with <a href="http://jekyllrb.com">Jekyll</a></span>
+    <span class="footer-footer">Made with <a href="http://jekyllrb.com">Jekyll</a></span>
   </div>
 
 </footer>
