--- a/css/main.css
+++ b/css/main.css
@@ -17,8 +17,7 @@
     --color-border: #e0e4da;
 
     --color-copy: #282c21;
-    --color-copy-light: #6a7557;
-    --color-copy-lighter: #919d7b;
+    --color-copy-light: #5F6A4E;
 
     --color-success: #2f6b2f;
     --color-warning: #6b6b2f;
