We need a lighter copy after all

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,8 @@
 
     --color-copy: #282c21;
     --color-copy-light: #5F6A4E;
-
+    --color-copy-lighter: #73815F;
+    
     --color-success: #2f6b2f;
     --color-warning: #6b6b2f;
     --color-error: #6b2f2f;
