Add a link to the about page in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <p class="text"><a href="/about">{{ site.description }}</a></p>
       </div>
     </div>
     <span class="footer-footer">Made with <a href="http://jekyllrb.com">Jekyll</a></span>
