Use link obfuscation on the rest of the site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
           </li>
           {% endif %}
           <li>
-            <a href="mailto:{{ site.email }}">Contact</a>
+            <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">Contact</a>
           </li>
         </ul>
       </div>
