--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -2,7 +2,7 @@
 <html>
   {% include head.html %}
   <body class="home">
-    <div class="page-content">
+    <div class="frontpage-content">
       <div class="wrapper">
         {{ content }}
       </div>
