Add logo for email

--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -32,6 +32,12 @@
     </a>
   </li>
   <li>
-    <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">Contact</a>
+    <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">
+      <span class="icon  icon--email">
+        <img src="/assets/logos/email-logo.svg" alt="email logo"/>
+      </span>
+      </span>
+      <span class="username">Contact</span>
+    </a>
   </li>
 </ul>
