--- a/css/main.css
+++ b/css/main.css
@@ -396,14 +396,15 @@ code {
     align-items: center;
     color: var(--color-copy-light);
     transition: color 0.2s ease;
+    height: 1.1rem;
 }
 
 
 /* Social Icons */
 .icon {
     display: flex;
-    width: 16px;
-    height: 16px;
+    width: 0.9rem;
+    height: 0.9rem;
     margin-right: var(--spacing-sm);
     vertical-align: middle;
     align-items: center;
