Remove unused class

--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -1,7 +1,7 @@
 <ul class="social-media-list">
   <li>
     <a href="https://github.com/{{ site.github_username }}">
-      <span class="icon  icon--github">
+      <span class="icon">
         <img src="/assets/logos/github-mark.svg" alt="github logo"/>
       </span>
       <span class="username">Github</span>
@@ -9,7 +9,7 @@
   </li>
   <li>
     <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">
-      <span class="icon  icon--linkedin">
+      <span class="icon">
         <img src="/assets/logos/linkedin-logo.svg" alt="linkedin logo"/>
       </span>
       <span class="username">LinkedIn</span>
@@ -17,7 +17,7 @@
   </li>
   <li>
     <a href="https://bluesky.com/profile/{{ site.bluesky_username }}">
-      <span class="icon  icon--bluesky">
+      <span class="icon">
         <img src="/assets/logos/bluesky-logo.svg" alt="bluesky logo"/>
       </span>
       <span class="username">Bluesky</span>
@@ -25,7 +25,7 @@
   </li>
   <li>
     <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">
-      <span class="icon  icon--email">
+      <span class="icon">
         <img src="/assets/logos/email-logo.svg" alt="email logo"/>
       </span>
       </span>
@@ -34,7 +34,7 @@
   </li>
   <li>
     <a href="https://x.com/{{ site.twitter_username }}">
-      <span class="icon  icon--twitter">
+      <span class="icon">
         <img src="/assets/logos/x-logo.svg" alt="x logo"/>
       </span>
       <span class="username">Twitter</span>
