Add width/height to social icons as per lighthouse issue

--- a/_includes/socialmedia.html
+++ b/_includes/socialmedia.html
@@ -2,7 +2,7 @@
   <li>
     <a href="https://github.com/{{ site.github_username }}">
       <span class="icon">
-        <img src="/assets/logos/github-mark.svg" alt="github logo"/>
+        <img width="16" height="16" src="/assets/logos/github-mark.svg" alt="github logo"/>
       </span>
       <span class="username">Github</span>
     </a>
@@ -10,7 +10,7 @@
   <li>
     <a href="https://www.linkedin.com/in/-{{ site.linkedin_username}}">
       <span class="icon">
-        <img src="/assets/logos/linkedin-logo.svg" alt="linkedin logo"/>
+        <img width="16" height="16" src="/assets/logos/linkedin-logo.svg" alt="linkedin logo"/>
       </span>
       <span class="username">LinkedIn</span>
     </a>
@@ -18,7 +18,7 @@
   <li>
     <a href="https://bluesky.com/profile/{{ site.bluesky_username }}">
       <span class="icon">
-        <img src="/assets/logos/bluesky-logo.svg" alt="bluesky logo"/>
+        <img width="16" height="16" src="/assets/logos/bluesky-logo.svg" alt="bluesky logo"/>
       </span>
       <span class="username">Bluesky</span>
     </a>
@@ -26,7 +26,7 @@
   <li>
     <a id="link-interaction" rel="nofollow, noindex" href="to-andreas/">
       <span class="icon">
-        <img src="/assets/logos/email-logo.svg" alt="email logo"/>
+        <img width="16" height="16" src="/assets/logos/email-logo.svg" alt="email logo"/>
       </span>
       </span>
       <span class="username">Contact</span>
@@ -35,7 +35,7 @@
   <li>
     <a href="https://x.com/{{ site.twitter_username }}">
       <span class="icon">
-        <img src="/assets/logos/x-logo.svg" alt="x logo"/>
+        <img width="16" height="16" src="/assets/logos/x-logo.svg" alt="x logo"/>
       </span>
       <span class="username">Twitter</span>
     </a>
